# gridfab

./: .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GRIDFAB_PROJECT_SPEC.md  INSTRUCTIONS.md  LICENSE.md  README.md  pyproject.toml
.claude/skills/gridfab-contribute/: SKILL.md
.claude/skills/gridfab-release/: SKILL.md
.github/workflows/: release.yml
assets/logo/: grid.txt  gridfab.json  icon.icns  palette.txt
examples/: CLAUDE.md
examples/potion/: BUILD.sh  grid.txt  palette.txt
examples/quern/: grid.txt  palette.txt
skills/gridfab-create/: SKILL.md
src/gridfab/: CLAUDE.md  __init__.py  __main__.py  cli.py  gui.py
src/gridfab/commands/: CLAUDE.md  __init__.py  atlas_cmd.py  edit.py  export_cmd.py  icon_cmd.py  init.py  render_cmd.py
src/gridfab/core/: CLAUDE.md  __init__.py  grid.py  palette.py
src/gridfab/render/: CLAUDE.md  __init__.py  export.py  ico.py  preview.py
src/gridfab/tagger/: CLAUDE.md  ai.py  app.py  navigator.py  tags.py
tests/: CLAUDE.md  conftest.py  test_atlas.py  test_cli.py  test_commands.py  test_grid.py  test_gui.py  test_palette.py  test_render.py  test_tagger.py
tools/: CLAUDE.md  build_custom_atlas.py  make_social_preview.py  tileset_tagger.py
